--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql-await": "^2.2.3",
+    "mysql2": "^3.0.1"
   }
 }
