--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql-await": "^2.2.3",
-    "mysql2": "^3.0.1"
+    "mysql2": "^3.0.1",
+    "nodemon": "^2.0.20"
   }
 }
