--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@material-ui/core": "^4.12.4",
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +18,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-icons": "^4.7.1",
+    "react-places-autocomplete": "^7.3.0",
+    "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
