--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^9.1.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "smart-webcomponents": "^15.0.11",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
