--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql-await": "^2.2.3",
     "mysql2": "^3.0.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "smart-scheduler": "^1.0.0",
+    "smart-webcomponents": "^15.0.11",
+    "smart-webcomponents-react": "^15.0.3"
   }
 }
