--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,16 @@
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@material-ui/core": "^4.12.4",
+    "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.6",
     "@mui/x-data-grid": "^5.17.24",
+    "@mui/x-date-pickers": "^5.0.20",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
