--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
