--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.11.6",
     "@mui/x-data-grid": "^5.17.24",
     "@mui/x-date-pickers": "^5.0.20",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,11 +20,13 @@
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.7.1",
     "react-places-autocomplete": "^7.3.0",
     "react-pro-sidebar": "^1.0.0",
