--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "googlemaps": "^1.12.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
+    "moment-range": "^4.0.2",
+    "moment-timezone": "^0.5.41",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql-await": "^2.2.3",
